// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a clear option 1`] = `
<InjectIntl(Frame)
  clearOptionDisplay="- Select -"
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a combobox variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a default variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a disabled combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a disabled default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render a disabled multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a disabled search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a disabled tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={true}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a multiple variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render a search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a search variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render a select with an optgroup and an option 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-12"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-labelledby="terra-select-screen-reader-label-9 terra-select-screen-reader-display-10 terra-select-screen-reader-placeholder-11"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  role="combobox"
  tabindex="0"
>
  <div
    class="visually-hidden-component"
    hidden=""
  >
    <span
      id="terra-select-screen-reader-label-9"
    >
      Search
    </span>
    <span
      id="terra-select-screen-reader-description-12"
    >
      List of 1 options. Use up and down arrow keys to navigate through options. Press enter to select an option.
    </span>
  </div>
  <div
    class="display"
    role="textbox"
  >
    <div
      class="placeholder"
      id="terra-select-screen-reader-placeholder-11"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with an optgroup and multiple options 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-16"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-labelledby="terra-select-screen-reader-label-13 terra-select-screen-reader-display-14 terra-select-screen-reader-placeholder-15"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  role="combobox"
  tabindex="0"
>
  <div
    class="visually-hidden-component"
    hidden=""
  >
    <span
      id="terra-select-screen-reader-label-13"
    >
      Search
    </span>
    <span
      id="terra-select-screen-reader-description-16"
    >
      List of 2 options. Use up and down arrow keys to navigate through options. Press enter to select an option.
    </span>
  </div>
  <div
    class="display"
    role="textbox"
  >
    <div
      class="placeholder"
      id="terra-select-screen-reader-placeholder-15"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with an option 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-4"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-labelledby="terra-select-screen-reader-label-1 terra-select-screen-reader-display-2 terra-select-screen-reader-placeholder-3"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  role="combobox"
  tabindex="0"
>
  <div
    class="visually-hidden-component"
    hidden=""
  >
    <span
      id="terra-select-screen-reader-label-1"
    >
      Search
    </span>
    <span
      id="terra-select-screen-reader-description-4"
    >
      List of 1 options. Use up and down arrow keys to navigate through options. Press enter to select an option.
    </span>
  </div>
  <div
    class="display"
    role="textbox"
  >
    <div
      class="placeholder"
      id="terra-select-screen-reader-placeholder-3"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a select with multiple options 1`] = `
<div
  aria-describedby="terra-select-screen-reader-description-8"
  aria-disabled="false"
  aria-expanded="false"
  aria-haspopup="true"
  aria-labelledby="terra-select-screen-reader-label-5 terra-select-screen-reader-display-6 terra-select-screen-reader-placeholder-7"
  class="select default"
  data-terra-select="true"
  data-terra-select-combobox="true"
  role="combobox"
  tabindex="0"
>
  <div
    class="visually-hidden-component"
    hidden=""
  >
    <span
      id="terra-select-screen-reader-label-5"
    >
      Search
    </span>
    <span
      id="terra-select-screen-reader-description-8"
    >
      List of 2 options. Use up and down arrow keys to navigate through options. Press enter to select an option.
    </span>
  </div>
  <div
    class="display"
    role="textbox"
  >
    <div
      class="placeholder"
      id="terra-select-screen-reader-placeholder-7"
    >
      - Select -
    </div>
  </div>
  <div
    class="toggle"
    data-terra-form-select-toggle="true"
  >
    <span
      class="arrow-icon"
    />
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="visually-hidden-component"
  />
</div>
`;

exports[`Select should render a tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render a tag variant with a placeholder 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={false}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="Placeholder"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render an invalid combobox variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;

exports[`Select should render an invalid default variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="default"
/>
`;

exports[`Select should render an invalid multiple variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="multiple"
/>
`;

exports[`Select should render an invalid search variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display=""
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value=""
  variant="search"
/>
`;

exports[`Select should render an invalid tag variant 1`] = `
<InjectIntl(Frame)
  data-terra-select={true}
  disabled={false}
  display={Array []}
  dropdown={[Function]}
  isInvalid={true}
  onDeselect={[Function]}
  onSelect={[Function]}
  placeholder="- Select -"
  totalOptions={0}
  value={Array []}
  variant="tag"
/>
`;
